--- a/website/index.html
+++ b/website/index.html
@@ -4,6 +4,7 @@
 	<script src="p5.js"></script>
 	<script src="sketch.js"></script>
 	<script src="graph.js"></script>
+	<script src="queue.js"></script>
 	<title></title>
 </head>
 <body>
