--- a/website/index.html
+++ b/website/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 	<script src="p5.js"></script>
-	<script src="graph.js"></script>
+<!-- 	<script src="graph.js"></script>
 	<script src="linha.js"></script>
 	<script src="sketch.js"></script>
-	<title></title>
+ -->	
+ 	<script src="map.js"></script>
+ 	<title></title>
 </head>
 <body>
 
